--- a/templates/Buttons/Input add-on.hbs
+++ b/templates/Buttons/Input add-on.hbs
@@ -1,7 +1,14 @@
 {{#template}}
-<div class="input-group-btn">
-    <button type="button" id="#BUTTON_ID#" class="btn #BUTTON_CSS_CLASSES#" onclick="#JAVASCRIPT#" #BUTTON_ATTRIBUTES#><i class="#ICON_CSS_CLASSES#"></i>#LABEL#</button>
-</div>
+<div class="input-group-btn"> <button type="button" id="#BUTTON_ID#" class="btn #BUTTON_CSS_CLASSES#" onclick="#JAVASCRIPT#" #BUTTON_ATTRIBUTES#><i class="#ICON_CSS_CLASSES#"></i>#LABEL#</button></div>
 {{/template}}
+{{#hot_template}}
 
-{{#hot_template}}{{/hot_template}}
+{{/hot_template}}
+
+{{#template_option_groups}}
+[]
+{{/template_option_groups}}
+
+{{#template_options}}
+[]
+{{/template_options}}
