--- a/templates/Regions/Blank.hbs
+++ b/templates/Regions/Blank.hbs
@@ -1,10 +1,21 @@
 {{#template}}
-<div id="#REGION_STATIC_ID#" class="ab-region ab-blank #REGION_CSS_CLASSES#" #REGION_ATTRIBUTES#>
-    #BODY#
-    #SUB_REGIONS#
-</div>
-{{/template}}
+<div id="#REGION_STATIC_ID#" class="ab-region ab-blank #REGION_CSS_CLASSES#" #REGION_ATTRIBUTES#> #BODY# #SUB_REGIONS#</div>
 
-{{#sub_plug_header_template}}{{/sub_plug_header_template}}
-{{#sub_plug_header_entry_template}}{{/sub_plug_header_entry_template}}
-{{#sub_plug_template}}{{/sub_plug_template}}
+{{/template}}
+{{#sub_plug_header_template}}
+
+{{/sub_plug_header_template}}
+{{#sub_plug_header_entry_template}}
+
+{{/sub_plug_header_entry_template}}
+{{#sub_plug_template}}
+
+{{/sub_plug_template}}
+
+{{#template_option_groups}}
+[]
+{{/template_option_groups}}
+
+{{#template_options}}
+[]
+{{/template_options}}
