--- a/templates/Fields/Blockquote (Display only).hbs
+++ b/templates/Fields/Blockquote (Display only).hbs
@@ -1,24 +1,57 @@
 {{#before_label_and_item}}
-<blockquote class="blockquote #ITEM_CSS_CLASSES#">
+
 {{/before_label_and_item}}
-    {{#before_label}}
-    <label for="#CURRENT_ITEM_NAME#" id="#LABEL_ID#" class="hidden-xs-up">
-    {{/before_label}}
-    {{#after_label}}
-    </label>
-    {{/after_label}}
-    {{#before_item}}
-    <p class="m-b-0">
-    {{/before_item}}
-    {{#after_item}}
-    </p>
-    {{/after_item}}
-{{#after_label_and_item}}
-<footer class="blockquote-footer">#CURRENT_ITEM_HELP_TEXT#</footer>
+	{{#before_label}}
+	
+	{{/before_label}}
+	{{#after_label}}
+	
+	{{/after_label}}
+	{{#before_item}}
+	<blockquote class="blockquote #ITEM_CSS_CLASSES#">
+
+	{{/before_item}}
+	{{#after_item}}
+	<footer class="blockquote-footer">#CURRENT_ITEM_HELP_TEXT#</footer>
 </blockquote>
+
+	{{/after_item}}
+{{#after_label_and_item}}
+
 {{/after_label_and_item}}
 
-{{#on_error_before_label}}{{/on_error_before_label}}
-{{#on_error_after_label}}{{/on_error_after_label}}
-{{#error_template}}{{/error_template}}
-{{#help_template}}{{/help_template}}
+{{#on_error_before_label}}
+
+{{/on_error_before_label}}
+{{#on_error_after_label}}
+
+{{/on_error_after_label}}
+{{#error_template}}
+
+{{/error_template}}
+{{#help_template}}
+
+{{/help_template}}
+
+{{#template_option_groups}}
+[]
+{{/template_option_groups}}
+
+{{#template_options}}
+[
+  {
+    "NAME": "REVERSED_RIGHT_ALIGNED",
+    "DISPLAY_NAME": "Reversed (Right Aligned)",
+    "DISPLAY_SEQUENCE": 20,
+    "CSS_CLASSES": "blockquote-reverse",
+    "HELP_TEXT": "Add this for a blockquote with right-aligned content."
+  },
+  {
+    "NAME": "HIDE_BLOCKQUOTE_FOOTER",
+    "DISPLAY_NAME": "Hide Blockquote Footer",
+    "DISPLAY_SEQUENCE": 10,
+    "CSS_CLASSES": "hide-blockquote-footer",
+    "HELP_TEXT": null
+  }
+]
+{{/template_options}}
