--- a/templates/Fields/Input add-on.hbs
+++ b/templates/Fields/Input add-on.hbs
@@ -1,19 +1,39 @@
 {{#before_label_and_item}}
-<span class="input-group-addon">
+
 {{/before_label_and_item}}
-    {{#before_label}}
-    <label for="#CURRENT_ITEM_NAME#" id="#LABEL_ID#">
-    {{/before_label}}
-    {{#after_label}}
-    </label>
-    {{/after_label}}
-    {{#before_item}}{{/before_item}}
-    {{#after_item}}{{/after_item}}
+	{{#before_label}}
+	
+	{{/before_label}}
+	{{#after_label}}
+	
+	{{/after_label}}
+	{{#before_item}}
+	<span class="input-group-addon">
+	{{/before_item}}
+	{{#after_item}}
+	</span>
+	{{/after_item}}
 {{#after_label_and_item}}
-</span>
+
 {{/after_label_and_item}}
 
-{{#on_error_before_label}}{{/on_error_before_label}}
-{{#on_error_after_label}}{{/on_error_after_label}}
-{{#error_template}}{{/error_template}}
-{{#help_template}}{{/help_template}}
+{{#on_error_before_label}}
+
+{{/on_error_before_label}}
+{{#on_error_after_label}}
+
+{{/on_error_after_label}}
+{{#error_template}}
+
+{{/error_template}}
+{{#help_template}}
+
+{{/help_template}}
+
+{{#template_option_groups}}
+[]
+{{/template_option_groups}}
+
+{{#template_options}}
+[]
+{{/template_options}}
