--- a/templates/Pages/Modal.hbs
+++ b/templates/Pages/Modal.hbs
@@ -1,5 +1,7 @@
 {{#inline_css}}
+
 {{/inline_css}}
+
 {{#header_template}}
 <!DOCTYPE html>
 <html>
@@ -28,16 +30,16 @@
         #PAGE_CSS#
     </head>
     <body id="#PAGE_STATIC_ID#" class="#PAGE_CSS_CLASSES#" #ONLOAD#>
-{{/header_template}}
 
+{{/header_template}}
 {{#box}}
 #FORM_OPEN#
 
 <!-- Item Container -->
 #REGION_POSITION_01#
 
-<div class="modal #PAGE_CSS_CLASSES#">
-    <div class="modal-content">
+<div class="#PAGE_CSS_CLASSES#">
+    <div class="modal-body">
         #SUCCESS_MESSAGE#
         #NOTIFICATION_MESSAGE#
         #BODY#
@@ -48,8 +50,8 @@
 </div>
 
 #FORM_CLOSE#
-{{/box}}
 
+{{/box}}
 {{#footer_template}}
 <!-- Mandatory APEX Javascript -->
 #DEVELOPER_TOOLBAR#
@@ -68,21 +70,60 @@
 #GENERATED_JAVASCRIPT#
 </body>
 </html>
+
 {{/footer_template}}
 
 {{#success_message}}
 <div>#MESSAGE#</div>
+
 {{/success_message}}
 {{#message}}
 <div>#MESSAGE#</div>
+
 {{/message}}
 
 {{#grid_template}}
 <div class="container">#ROWS#</div>
+
 {{/grid_template}}
 {{#grid_row_template}}
 <div class="row">#COLUMNS#</div>
+
 {{/grid_row_template}}
 {{#grid_column_template}}
 <div class="col-xs-12 col-md-#COLUMN_SPAN_NUMBER# #CSS_CLASSES#" #ATTRIBUTES#>#CONTENT#</div>
+
 {{/grid_column_template}}
+
+{{#dialog_browser_frame}}
+MODAL
+{{/dialog_browser_frame}}
+{{#dialog_css_classes}}
+
+{{/dialog_css_classes}}
+{{#dialog_height}}
+
+{{/dialog_height}}
+{{#dialog_js_cancel_code}}
+apex.navigation.dialog.cancel(#IS_MODAL#);
+{{/dialog_js_cancel_code}}
+{{#dialog_js_close_code}}
+apex.navigation.dialog.close(#IS_MODAL#,#TARGET#);
+{{/dialog_js_close_code}}
+{{#dialog_js_init_code}}
+apex.navigation.dialog(#PAGE_URL#,{title:#TITLE#,height:#DIALOG_HEIGHT#,width:#DIALOG_WIDTH#,maxWidth:#DIALOG_MAX_WIDTH#,modal:#IS_MODAL#,dialog:#DIALOG#,#DIALOG_ATTRIBUTES#},#DIALOG_CSS_CLASSES#,#TRIGGERING_ELEMENT#);
+{{/dialog_js_init_code}}
+{{#dialog_max_width}}
+
+{{/dialog_max_width}}
+{{#dialog_width}}
+
+{{/dialog_width}}
+
+{{#template_option_groups}}
+[]
+{{/template_option_groups}}
+
+{{#template_options}}
+[]
+{{/template_options}}
