--- a/templates/Regions/Card.hbs
+++ b/templates/Regions/Card.hbs
@@ -1,37 +1,48 @@
 {{#template}}
-<div id="#REGION_STATIC_ID#" class="ab-region card #REGION_CSS_CLASSES#" #REGION_ATTRIBUTES#>
-    <div class="card-block">
-        <h4 class="card-title">#TITLE#</h4>
-
-        <blockquote class="card-text">
-            #BODY#
-        </blockquote>
-
-        <div class="btn-toolbar" role="toolbar" aria-label="Toolbar">
-            <div class="ab-btn-group" role="group" aria-label="Button Group">#EDIT#</div>
-            <div class="ab-btn-group" role="group" aria-label="Button Group">#EXPAND#</div>
-            <div class="ab-btn-group" role="group" aria-label="Button Group">#CREATE#</div>
-            <div class="ab-btn-group" role="group" aria-label="Button Group">#CREATE2#</div>
-            <div class="ab-btn-group" role="group" aria-label="Button Group">#NEXT#</div>
-            <div class="ab-btn-group" role="group" aria-label="Button Group">#PREVIOUS#</div>
-
-            <div class="ab-btn-group" role="group" aria-label="Button Group">#CLOSE#</div>
-            <div class="ab-btn-group" role="group" aria-label="Button Group">#COPY#</div>
-            <div class="ab-btn-group" role="group" aria-label="Button Group">#DELETE#</div>
-            <div class="ab-btn-group" role="group" aria-label="Button Group">#CHANGE#</div>
-            <div class="ab-btn-group" role="group" aria-label="Button Group">#HELP#</div>
-        </div>
-    </div>
-
-    #SUB_REGION_HEADERS#
-    #SUB_REGIONS#
-</div>
+<div id="#REGION_STATIC_ID#" class="ab-region card #REGION_CSS_CLASSES#" #REGION_ATTRIBUTES#><div class="card-block"><h4 class="card-title">#TITLE#</h4><blockquote class="card-text"> #BODY#</blockquote><div class="btn-toolbar" role="toolbar" aria-label="Toolbar"><div class="ab-btn-group" role="group" aria-label="Button Group">#EDIT#</div><div class="ab-btn-group" role="group" aria-label="Button Group">#EXPAND#</div><div class="ab-btn-group" role="group" aria-label="Button Group">#CREATE#</div><div class="ab-btn-group" role="group" aria-label="Button Group">#CREATE2#</div><div class="ab-btn-group" role="group" aria-label="Button Group">#NEXT#</div><div class="ab-btn-group" role="group" aria-label="Button Group">#PREVIOUS#</div><div class="ab-btn-group" role="group" aria-label="Button Group">#CLOSE#</div><div class="ab-btn-group" role="group" aria-label="Button Group">#COPY#</div><div class="ab-btn-group" role="group" aria-label="Button Group">#DELETE#</div><div class="ab-btn-group" role="group" aria-label="Button Group">#CHANGE#</div><div class="ab-btn-group" role="group" aria-label="Button Group">#HELP#</div></div></div> #SUB_REGION_HEADERS# #SUB_REGIONS#</div>
 {{/template}}
-
 {{#sub_plug_header_template}}
-<div class="card-header">
-    #SUB_REGION_HEADERS#
-</div>
+<div class="card-header"> #SUB_REGION_HEADERS#</div>
 {{/sub_plug_header_template}}
-{{#sub_plug_header_entry_template}}{{/sub_plug_header_entry_template}}
-{{#sub_plug_template}}{{/sub_plug_template}}
+{{#sub_plug_header_entry_template}}
+
+{{/sub_plug_header_entry_template}}
+{{#sub_plug_template}}
+
+{{/sub_plug_template}}
+
+{{#template_option_groups}}
+[
+  {
+    "NAME": "CARD_IMAGE_POSITION",
+    "DISPLAY_NAME": "Card Image Position",
+    "DISPLAY_SEQUENCE": 1,
+    "NULL_TEXT": "No Image",
+    "IS_ADVANCED": "N",
+    "TEMPLATE_OPTIONS": [
+      {
+        "NAME": "TOP",
+        "DISPLAY_NAME": "Top",
+        "DISPLAY_SEQUENCE": 1,
+        "CSS_CLASSES": "ab-card-img-top"
+      },
+      {
+        "NAME": "BOTTOM",
+        "DISPLAY_NAME": "Bottom",
+        "DISPLAY_SEQUENCE": 2,
+        "CSS_CLASSES": "ab-card-img-bottom"
+      },
+      {
+        "NAME": "OVERLAY",
+        "DISPLAY_NAME": "Overlay",
+        "DISPLAY_SEQUENCE": 3,
+        "CSS_CLASSES": "ab-card-img-overlay"
+      }
+    ]
+  }
+]
+{{/template_option_groups}}
+
+{{#template_options}}
+[]
+{{/template_options}}
