--- a/templates/Regions/Standard.hbs
+++ b/templates/Regions/Standard.hbs
@@ -1,32 +1,61 @@
 {{#template}}
-<div id="#REGION_STATIC_ID#" class="ab-region #REGION_CSS_CLASSES#" #REGION_ATTRIBUTES#>
-    <div class="ab-region-container">
-        <div class="ab-region-title">#TITLE#</div>
-        <div class="btn-toolbar" role="toolbar" aria-label="Toolbar">
-            <div class="ab-btn-group" role="group" aria-label="Button Group">#EDIT#</div>
-            <div class="ab-btn-group" role="group" aria-label="Button Group">#EXPAND#</div>
-            <div class="ab-btn-group" role="group" aria-label="Button Group">#CREATE#</div>
-            <div class="ab-btn-group" role="group" aria-label="Button Group">#CREATE2#</div>
-            <div class="ab-btn-group" role="group" aria-label="Button Group">#NEXT#</div>
-            <div class="ab-btn-group" role="group" aria-label="Button Group">#PREVIOUS#</div>
-        </div>
+<div id="#REGION_STATIC_ID#" class="ab-region #REGION_CSS_CLASSES#" #REGION_ATTRIBUTES#><div class="ab-region-container"><div class="ab-region-title">#TITLE#</div><div class="btn-toolbar" role="toolbar" aria-label="Toolbar"><div class="ab-btn-group" role="group" aria-label="Button Group">#EDIT#</div><div class="ab-btn-group" role="group" aria-label="Button Group">#EXPAND#</div><div class="ab-btn-group" role="group" aria-label="Button Group">#CREATE#</div><div class="ab-btn-group" role="group" aria-label="Button Group">#CREATE2#</div><div class="ab-btn-group" role="group" aria-label="Button Group">#NEXT#</div><div class="ab-btn-group" role="group" aria-label="Button Group">#PREVIOUS#</div></div><div class="region-body"> #BODY# #SUB_REGIONS#</div><div class="btn-toolbar" role="toolbar" aria-label="Toolbar"><div class="ab-btn-group" role="group" aria-label="Button Group">#CLOSE#</div><div class="ab-btn-group" role="group" aria-label="Button Group">#COPY#</div><div class="ab-btn-group" role="group" aria-label="Button Group">#DELETE#</div><div class="ab-btn-group" role="group" aria-label="Button Group">#CHANGE#</div><div class="ab-btn-group" role="group" aria-label="Button Group">#HELP#</div></div></div></div>
 
-        <div class="region-body">
-            #BODY#
-            #SUB_REGIONS#
-        </div>
-
-        <div class="btn-toolbar" role="toolbar" aria-label="Toolbar">
-            <div class="ab-btn-group" role="group" aria-label="Button Group">#CLOSE#</div>
-            <div class="ab-btn-group" role="group" aria-label="Button Group">#COPY#</div>
-            <div class="ab-btn-group" role="group" aria-label="Button Group">#DELETE#</div>
-            <div class="ab-btn-group" role="group" aria-label="Button Group">#CHANGE#</div>
-            <div class="ab-btn-group" role="group" aria-label="Button Group">#HELP#</div>
-        </div>
-    </div>
-</div>
 {{/template}}
+{{#sub_plug_header_template}}
 
-{{#sub_plug_header_template}}{{/sub_plug_header_template}}
-{{#sub_plug_header_entry_template}}{{/sub_plug_header_entry_template}}
-{{#sub_plug_template}}{{/sub_plug_template}}
+{{/sub_plug_header_template}}
+{{#sub_plug_header_entry_template}}
+
+{{/sub_plug_header_entry_template}}
+{{#sub_plug_template}}
+
+{{/sub_plug_template}}
+
+{{#template_option_groups}}
+[
+  {
+    "NAME": "REGION_JUMBOTRON",
+    "DISPLAY_NAME": "Jumbotron",
+    "DISPLAY_SEQUENCE": 50,
+    "HELP_TEXT": "Activates the Jumbotron behavior.",
+    "NULL_TEXT": "None",
+    "IS_ADVANCED": "N",
+    "TEMPLATE_OPTIONS": [
+      {
+        "NAME": "JUMBOTRON_NORMAL",
+        "DISPLAY_NAME": "Jumbotron Normal",
+        "DISPLAY_SEQUENCE": 1,
+        "CSS_CLASSES": "jumbotron",
+        "HELP_TEXT": "This is a simple hero unit, a simple jumbotron-style component for calling extra attention to featured content or information."
+      },
+      {
+        "NAME": "JUMBOTRON_FLUID",
+        "DISPLAY_NAME": "Jumbotron Fluid",
+        "DISPLAY_SEQUENCE": 2,
+        "CSS_CLASSES": "jumbotron jumbotron-fluid",
+        "HELP_TEXT": "This is a modified jumbotron that occupies the entire horizontal space of its parent."
+      },
+      {
+        "NAME": "JUMBOTRON_MASTER",
+        "DISPLAY_NAME": "Jumbotron Master",
+        "DISPLAY_SEQUENCE": 3,
+        "CSS_CLASSES": "jumbotron jumbotron-fluid master-jumbotron",
+        "HELP_TEXT": "Make the jumbotron even bigger."
+      }
+    ]
+  }
+]
+{{/template_option_groups}}
+
+{{#template_options}}
+[
+  {
+    "NAME": "INLINE_FORM",
+    "DISPLAY_NAME": "Inline form",
+    "DISPLAY_SEQUENCE": 10,
+    "CSS_CLASSES": "form-inline",
+    "HELP_TEXT": null
+  }
+]
+{{/template_options}}
