mostly work around grid containers

--- a/src/scss/_apex_components.scss
+++ b/src/scss/_apex_components.scss
@@ -13,4 +13,5 @@
 @import "apex_components/navbar";
 @import "apex_components/paginations";
 @import "apex_components/tables";
+@import "apex_components/themeroller";
 @import "apex_components/typography";
