--- a/src/scss/apex_components/_grid.scss
+++ b/src/scss/apex_components/_grid.scss
@@ -1,4 +1,25 @@
-// .container {
-//     padding-left: 0;
-//     padding-right: 0;
-// }
+.ab-page-body-container {
+	.ab-body {
+		@include make-container();
+		@include make-container-max-widths();
+	}
+}
+
+.ab-page-body-container-fluid {
+	.ab-body {
+		@include make-container();
+	}
+}
+
+.ab-page-footer-container {
+	.ab-footer {
+		@include make-container();
+		@include make-container-max-widths();
+	}
+}
+
+.ab-page-footer-container-fluid {
+	.ab-footer {
+		@include make-container();
+	}
+}
