--- a/templates/Pages/Standard.hbs
+++ b/templates/Pages/Standard.hbs
@@ -41,35 +41,31 @@
 
 #SIDE_GLOBAL_NAVIGATION_LIST#
 
-<div class="ab-main">
+<main class="ab-body">
 	<!-- Messages -->
 	#GLOBAL_NOTIFICATION#
 	#SUCCESS_MESSAGE#
 	#NOTIFICATION_MESSAGE#
 
 	#BODY#
-</div>
+</main>
 
 <footer class="ab-footer">
-	<div class="container">
-		<!-- Footer Top -->
-		#REGION_POSITION_08#
-	</div>
+	<!-- Footer Top -->
+	#REGION_POSITION_08#
 
 	<!-- Footer Bottom -->
 	<div class="footer-copyright">
-		<div class="container">
-			<div class="version">#APP_VERSION#</div>
-			<div class="customize right">#CUSTOMIZE#</div>
-			<div class="screenreader right">#SCREEN_READER_TOGGLE#</div>
-		</div>
+		<div class="version">#APP_VERSION#</div>
+		<div class="customize right">#CUSTOMIZE#</div>
+		<div class="screenreader right">#SCREEN_READER_TOGGLE#</div>
 	</div>
 </footer>
 
 #FORM_CLOSE#
 {{/box}}
+
 {{#footer_template}}
-#FORM_CLOSE#
 #DEVELOPER_TOOLBAR#
 #APEX_JAVASCRIPT#
 #GENERATED_CSS#
@@ -94,7 +90,7 @@ CLOSE_NOTIFICATION
 {{/message}}
 
 {{#grid_template}}
-<div class="container">#ROWS#</div>
+<div class="ab-container">#ROWS#</div>
 {{/grid_template}}
 {{#grid_row_template}}
 <div class="row">#COLUMNS#</div>
@@ -131,44 +127,77 @@ apex.navigation.dialog(#PAGE_URL#,{title:#TITLE#,height:#DIALOG_HEIGHT#,width:#D
 {{#template_option_groups}}
 [
   {
-    "NAME": "NAVBAR_PLACEMENT",
-    "DISPLAY_NAME": "Placement",
-    "DISPLAY_SEQUENCE": 2,
-    "NULL_TEXT": "Default",
-    "IS_ADVANCED": "N",
-    "TEMPLATE_OPTIONS": [
+    "name": "NAVBAR_PLACEMENT",
+    "display_name": "Placement",
+    "display_sequence": 2,
+    "null_text": "Default",
+    "is_advanced": "N",
+    "template_options": [
       {
-        "NAME": "NAVBAR_PLACEMENT_FIXED_TOP",
-        "DISPLAY_NAME": "Fixed Top",
-        "DISPLAY_SEQUENCE": 1,
-        "CSS_CLASSES": "fixed-top"
+        "name": "NAVBAR_PLACEMENT_FIXED_TOP",
+        "display_name": "Fixed Top",
+        "display_sequence": 1,
+        "css_classes": "fixed-top"
       },
       {
-        "NAME": "NAVBAR_PLACEMENT_FIXED_BOTTOM",
-        "DISPLAY_NAME": "Fixed Bottom",
-        "DISPLAY_SEQUENCE": 1,
-        "CSS_CLASSES": "fixed-bottom"
+        "name": "NAVBAR_PLACEMENT_FIXED_BOTTOM",
+        "display_name": "Fixed Bottom",
+        "display_sequence": 1,
+        "css_classes": "fixed-bottom"
       }
     ]
   },
   {
-    "NAME": "PAGE_CONTAINER",
-    "DISPLAY_NAME": "Page Container",
-    "DISPLAY_SEQUENCE": 1,
-    "HELP_TEXT": "Containers provide a means to center and horizontally pad your site’s contents",
-    "IS_ADVANCED": "N",
-    "TEMPLATE_OPTIONS": [
+    "name": "PAGE_BODY_CONTAINER",
+    "display_name": "Page Container",
+    "display_sequence": 1,
+    "help_text": "Containers provide a means to center and horizontally pad your site’s contents",
+    "is_advanced": "N",
+    "template_options": [
       {
-        "NAME": "PAGE_CONTAINER_DEFAULT",
-        "DISPLAY_NAME": "Default",
-        "DISPLAY_SEQUENCE": 1,
-        "CSS_CLASSES": "ab-container"
+        "name": "PAGE_BODY_CONTAINER_DEFAULT",
+        "display_name": "Default",
+        "display_sequence": 1,
+        "css_classes": "ab-page-body-container"
       },
       {
-        "NAME": "PAGE_CONTAINER_FLUID",
-        "DISPLAY_NAME": "100% Width",
-        "DISPLAY_SEQUENCE": 2,
-        "CSS_CLASSES": "ab-container-fluid"
+        "name": "PAGE_BODY_CONTAINER_FLUID",
+        "display_name": "Full Width",
+        "display_sequence": 2,
+        "css_classes": "ab-page-body-container-fluid"
+      },
+      {
+        "name": "PAGE_BODY_CONTAINER_NONE",
+        "display_name": "No Container",
+        "display_sequence": 3,
+        "css_classes": "ab-page-body-container-none"
+      }
+    ]
+  },
+  {
+    "name": "PAGE_FOOTER_CONTAINER",
+    "display_name": "Footer Container",
+    "display_sequence": 1,
+    "help_text": "Containers provide a means to center and horizontally pad your site’s contents",
+    "is_advanced": "Y",
+    "template_options": [
+      {
+        "name": "PAGE_FOOTER_CONTAINER_DEFAULT",
+        "display_name": "Default",
+        "display_sequence": 1,
+        "css_classes": "ab-page-footer-container"
+      },
+      {
+        "name": "PAGE_FOOTER_CONTAINER_FLUID",
+        "display_name": "Full Width",
+        "display_sequence": 2,
+        "css_classes": "ab-page-footer-container-fluid"
+      },
+      {
+        "name": "PAGE_FOOTER_CONTAINER_NONE",
+        "display_name": "No Container",
+        "display_sequence": 3,
+        "css_classes": "ab-page-footer-container-none"
       }
     ]
   }
