--- a/templates/Pages/~global.template.options.hbs
+++ b/templates/Pages/~global.template.options.hbs
@@ -1,12 +1,7 @@
-{
-  "TEMPLATE_OPTIONS": [
-    {
-      "NAME": "CONTAINER_FLUID",
-      "DISPLAY_NAME": "Container Fluid",
-      "DISPLAY_SEQUENCE": 1,
-      "CSS_CLASSES": "ab-container-fluid",
-      "HELP_TEXT": "Use .this for a full width container, spanning the entire width of the viewport."
-    }
-  ],
-  "TEMPLATE_OPTION_GROUPS": []
-}
+{{#template_option_groups}}
+[]
+{{/template_option_groups}}
+
+{{#template_options}}
+[]
+{{/template_options}}
