--- a/templates/Regions/~global.template.options.hbs
+++ b/templates/Regions/~global.template.options.hbs
@@ -1,99 +1,108 @@
-{
-  "TEMPLATE_OPTIONS": [],
-  "TEMPLATE_OPTION_GROUPS": [
-    {
-      "NAME": "REGION_TEXT_ALIGN",
-      "DISPLAY_NAME": "Text Alignment",
-      "DISPLAY_SEQUENCE": 2,
-      "IS_ADVANCED": "N",
-      "TEMPLATE_OPTIONS": [
-        {
-          "NAME": "REGION_TEXT_ALIGN_LEFT",
-          "DISPLAY_NAME": "Left",
-          "DISPLAY_SEQUENCE": 1,
-          "CSS_CLASSES": "text-left"
-        },
-        {
-          "NAME": "REGION_TEXT_ALIGN_RIGHT",
-          "DISPLAY_NAME": "Right",
-          "DISPLAY_SEQUENCE": 3,
-          "CSS_CLASSES": "text-right"
-        },
-        {
-          "NAME": "REGION_TEXT_ALIGN_CENTER",
-          "DISPLAY_NAME": "Center",
-          "DISPLAY_SEQUENCE": 2,
-          "CSS_CLASSES": "text-center"
-        }
-      ]
-    },
-    {
-      "NAME": "REGION_TITLE_SIZE",
-      "DISPLAY_NAME": "Title Size",
-      "DISPLAY_SEQUENCE": 1,
-      "IS_ADVANCED": "N",
-      "TEMPLATE_OPTIONS": [
-        {
-          "NAME": "REGION_TITLE_SIZE_H1",
-          "DISPLAY_NAME": "Heading 1",
-          "DISPLAY_SEQUENCE": 5,
-          "CSS_CLASSES": "ab-h1"
-        },
-        {
-          "NAME": "REGION_TITLE_SIZE_H5",
-          "DISPLAY_NAME": "Heading 5",
-          "DISPLAY_SEQUENCE": 9,
-          "CSS_CLASSES": "ab-h5"
-        },
-        {
-          "NAME": "REGION_TITLE_SIZE_D1",
-          "DISPLAY_NAME": "Display Heading 1",
-          "DISPLAY_SEQUENCE": 1,
-          "CSS_CLASSES": "ab-display-1"
-        },
-        {
-          "NAME": "REGION_TITLE_SIZE_D2",
-          "DISPLAY_NAME": "Display Heading 2",
-          "DISPLAY_SEQUENCE": 2,
-          "CSS_CLASSES": "ab-display-2"
-        },
-        {
-          "NAME": "REGION_TITLE_SIZE_D4",
-          "DISPLAY_NAME": "Display Heading 4",
-          "DISPLAY_SEQUENCE": 4,
-          "CSS_CLASSES": "ab-display-4"
-        },
-        {
-          "NAME": "REGION_TITLE_SIZE_H3",
-          "DISPLAY_NAME": "Heading 3",
-          "DISPLAY_SEQUENCE": 7,
-          "CSS_CLASSES": "ab-h3"
-        },
-        {
-          "NAME": "REGION_TITLE_SIZE_H6",
-          "DISPLAY_NAME": "Heading 6",
-          "DISPLAY_SEQUENCE": 10,
-          "CSS_CLASSES": "ab-h6"
-        },
-        {
-          "NAME": "REGION_TITLE_SIZE_D3",
-          "DISPLAY_NAME": "Display Heading 3",
-          "DISPLAY_SEQUENCE": 3,
-          "CSS_CLASSES": "ab-display-3"
-        },
-        {
-          "NAME": "REGION_TITLE_SIZE_H2",
-          "DISPLAY_NAME": "Heading 2",
-          "DISPLAY_SEQUENCE": 6,
-          "CSS_CLASSES": "ab-h2"
-        },
-        {
-          "NAME": "REGION_TITLE_SIZE_H4",
-          "DISPLAY_NAME": "Heading 4",
-          "DISPLAY_SEQUENCE": 8,
-          "CSS_CLASSES": "ab-h4"
-        }
-      ]
-    }
-  ]
-}
+{{#template_option_groups}}
+[
+	{
+		"name": "REGION_TITLE_SIZE",
+		"display_name": "Title Size",
+		"display_sequence": 1,
+		"is_advanced": "N",
+		"template_options": [
+			{
+				"name": "REGION_TITLE_SIZE_HIDDEN",
+				"display_name": "Hidden",
+				"display_sequence": 0,
+				"css_classes": "ab-region-title-size-hidden"
+			},
+			{
+				"name": "REGION_TITLE_SIZE_D1",
+				"display_name": "Display Heading 1",
+				"display_sequence": 1,
+				"css_classes": "ab-region-title-size-display-1"
+			},
+			{
+				"name": "REGION_TITLE_SIZE_D2",
+				"display_name": "Display Heading 2",
+				"display_sequence": 2,
+				"css_classes": "ab-region-title-size-display-2"
+			},
+			{
+				"name": "REGION_TITLE_SIZE_D3",
+				"display_name": "Display Heading 3",
+				"display_sequence": 3,
+				"css_classes": "ab-region-title-size-display-3"
+			},
+			{
+				"name": "REGION_TITLE_SIZE_D4",
+				"display_name": "Display Heading 4",
+				"display_sequence": 4,
+				"css_classes": "ab-region-title-size-display-4"
+			},
+			{
+				"name": "REGION_TITLE_SIZE_H1",
+				"display_name": "Heading 1",
+				"display_sequence": 5,
+				"css_classes": "ab-region-title-size-h1"
+			},
+			{
+				"name": "REGION_TITLE_SIZE_H2",
+				"display_name": "Heading 2",
+				"display_sequence": 6,
+				"css_classes": "ab-region-title-size-h2"
+			},
+			{
+				"name": "REGION_TITLE_SIZE_H3",
+				"display_name": "Heading 3",
+				"display_sequence": 7,
+				"css_classes": "ab-region-title-size-h3"
+			},
+			{
+				"name": "REGION_TITLE_SIZE_H4",
+				"display_name": "Heading 4",
+				"display_sequence": 8,
+				"css_classes": "ab-region-title-size-h4"
+			},
+			{
+				"name": "REGION_TITLE_SIZE_H5",
+				"display_name": "Heading 5",
+				"display_sequence": 9,
+				"css_classes": "ab-region-title-size-h5"
+			},
+			{
+				"name": "REGION_TITLE_SIZE_H6",
+				"display_name": "Heading 6",
+				"display_sequence": 10,
+				"css_classes": "ab-region-title-size-h6"
+			}
+		]
+	},
+	{
+		"name": "REGION_TEXT_ALIGN",
+		"display_name": "Text Alignment",
+		"display_sequence": 2,
+		"is_advanced": "N",
+		"template_options": [
+			{
+				"name": "REGION_TEXT_ALIGN_LEFT",
+				"display_name": "Left",
+				"display_sequence": 1,
+				"css_classes": "text-left"
+			},
+			{
+				"name": "REGION_TEXT_ALIGN_RIGHT",
+				"display_name": "Right",
+				"display_sequence": 3,
+				"css_classes": "text-right"
+			},
+			{
+				"name": "REGION_TEXT_ALIGN_CENTER",
+				"display_name": "Center",
+				"display_sequence": 2,
+				"css_classes": "text-center"
+			}
+		]
+	}
+]
+{{/template_option_groups}}
+
+{{#template_options}}
+[]
+{{/template_options}}
