adds spacing and visibility utilities

--- a/templates/Regions/~global.template.options.hbs
+++ b/templates/Regions/~global.template.options.hbs
@@ -99,6 +99,267 @@
 				"css_classes": "text-center"
 			}
 		]
+	},
+	{
+		"name": "REGION_MARGIN_TOP",
+		"display_name": "Margin Top",
+		"display_sequence": 900,
+		"is_advanced": "Y",
+		"null_text": "Default",
+		"template_options": [
+			{
+				"name": "REGION_MARGIN_TOP_0",
+				"display_name": "0",
+				"display_sequence": 0,
+				"css_classes": "mt-0"
+			},
+			{
+				"name": "REGION_MARGIN_TOP_1",
+				"display_name": "1",
+				"display_sequence": 1,
+				"css_classes": "mt-1"
+			},
+			{
+				"name": "REGION_MARGIN_TOP_2",
+				"display_name": "2",
+				"display_sequence": 2,
+				"css_classes": "mt-2"
+			},
+			{
+				"name": "REGION_MARGIN_TOP_3",
+				"display_name": "3",
+				"display_sequence": 3,
+				"css_classes": "mt-3"
+			},
+			{
+				"name": "REGION_MARGIN_TOP_4",
+				"display_name": "4",
+				"display_sequence": 4,
+				"css_classes": "mt-4"
+			},
+			{
+				"name": "REGION_MARGIN_TOP_5",
+				"display_name": "5",
+				"display_sequence": 5,
+				"css_classes": "mt-5"
+			}
+		]
+	},
+	{
+		"name": "REGION_MARGIN_BOTTOM",
+		"display_name": "Margin Bottom",
+		"display_sequence": 901,
+		"is_advanced": "Y",
+		"null_text": "Default",
+		"template_options": [
+			{
+				"name": "REGION_MARGIN_BOTTOM_0",
+				"display_name": "0",
+				"display_sequence": 0,
+				"css_classes": "mb-0"
+			},
+			{
+				"name": "REGION_MARGIN_BOTTOM_1",
+				"display_name": "1",
+				"display_sequence": 1,
+				"css_classes": "mb-1"
+			},
+			{
+				"name": "REGION_MARGIN_BOTTOM_2",
+				"display_name": "2",
+				"display_sequence": 2,
+				"css_classes": "mb-2"
+			},
+			{
+				"name": "REGION_MARGIN_BOTTOM_3",
+				"display_name": "3",
+				"display_sequence": 3,
+				"css_classes": "mb-3"
+			},
+			{
+				"name": "REGION_MARGIN_BOTTOM_4",
+				"display_name": "4",
+				"display_sequence": 4,
+				"css_classes": "mb-4"
+			},
+			{
+				"name": "REGION_MARGIN_BOTTOM_5",
+				"display_name": "5",
+				"display_sequence": 5,
+				"css_classes": "mb-5"
+			}
+		]
+	},
+	{
+		"name": "REGION_MARGIN_LEFT",
+		"display_name": "Margin Left",
+		"display_sequence": 902,
+		"is_advanced": "Y",
+		"null_text": "Default",
+		"template_options": [
+			{
+				"name": "REGION_MARGIN_LEFT_0",
+				"display_name": "0",
+				"display_sequence": 0,
+				"css_classes": "ml-0"
+			},
+			{
+				"name": "REGION_MARGIN_LEFT_1",
+				"display_name": "1",
+				"display_sequence": 1,
+				"css_classes": "ml-1"
+			},
+			{
+				"name": "REGION_MARGIN_LEFT_2",
+				"display_name": "2",
+				"display_sequence": 2,
+				"css_classes": "ml-2"
+			},
+			{
+				"name": "REGION_MARGIN_LEFT_3",
+				"display_name": "3",
+				"display_sequence": 3,
+				"css_classes": "ml-3"
+			},
+			{
+				"name": "REGION_MARGIN_LEFT_4",
+				"display_name": "4",
+				"display_sequence": 4,
+				"css_classes": "ml-4"
+			},
+			{
+				"name": "REGION_MARGIN_LEFT_5",
+				"display_name": "5",
+				"display_sequence": 5,
+				"css_classes": "ml-5"
+			}
+		]
+	},
+	{
+		"name": "REGION_MARGIN_RIGHT",
+		"display_name": "Margin Right",
+		"display_sequence": 903,
+		"is_advanced": "Y",
+		"null_text": "Default",
+		"template_options": [
+			{
+				"name": "REGION_MARGIN_RIGHT_0",
+				"display_name": "0",
+				"display_sequence": 0,
+				"css_classes": "mr-0"
+			},
+			{
+				"name": "REGION_MARGIN_RIGHT_1",
+				"display_name": "1",
+				"display_sequence": 1,
+				"css_classes": "mr-1"
+			},
+			{
+				"name": "REGION_MARGIN_RIGHT_2",
+				"display_name": "2",
+				"display_sequence": 2,
+				"css_classes": "mr-2"
+			},
+			{
+				"name": "REGION_MARGIN_RIGHT_3",
+				"display_name": "3",
+				"display_sequence": 3,
+				"css_classes": "mr-3"
+			},
+			{
+				"name": "REGION_MARGIN_RIGHT_4",
+				"display_name": "4",
+				"display_sequence": 4,
+				"css_classes": "mr-4"
+			},
+			{
+				"name": "REGION_MARGIN_RIGHT_5",
+				"display_name": "5",
+				"display_sequence": 5,
+				"css_classes": "mr-5"
+			}
+		]
+	},
+	{
+		"name": "REGION_VISIBILITY",
+		"display_name": "Visibility",
+		"display_sequence": 999,
+		"is_advanced": "Y",
+		"null_text": "Visible on all screen sizes",
+		"template_options": [
+			{
+				"name": "REGION_VISIBILITY_HIDDEN",
+				"display_name": "Hidden on all screen sizes",
+				"display_sequence": 1,
+				"css_classes": "d-none"
+			},
+			{
+				"name": "REGION_VISIBILITY_XS",
+				"display_name": "Visible only on xs",
+				"display_sequence": 2,
+				"css_classes": "d-sm-none"
+			},
+			{
+				"name": "REGION_VISIBILITY_SM",
+				"display_name": "Visible only on sm",
+				"display_sequence": 3,
+				"css_classes": "d-none d-sm-block d-md-none"
+			},
+			{
+				"name": "REGION_VISIBILITY_MD",
+				"display_name": "Visible only on md",
+				"display_sequence": 4,
+				"css_classes": "d-none d-md-block d-lg-none"
+			},
+			{
+				"name": "REGION_VISIBILITY_LG",
+				"display_name": "Visible only on lg",
+				"display_sequence": 5,
+				"css_classes": "d-none d-lg-block d-xl-none"
+			},
+			{
+				"name": "REGION_VISIBILITY_XL",
+				"display_name": "Visible only on xl",
+				"display_sequence": 6,
+				"css_classes": "d-none d-xl-block"
+			},
+			{
+				"name": "REGION_VISIBILITY_XS-SM",
+				"display_name": "Visible only on xs-sm",
+				"display_sequence": 7,
+				"css_classes": "d-md-none"
+			},
+			{
+				"name": "REGION_VISIBILITY_XS-SM-MD",
+				"display_name": "Visible only on xs-sm-md",
+				"display_sequence": 8,
+				"css_classes": "d-lg-none"
+			},
+			{
+				"name": "REGION_VISIBILITY_XS-SM-MD-LG",
+				"display_name": "Visible only on xs-sm-md-lg",
+				"display_sequence": 9,
+				"css_classes": "d-xl-none"
+			},
+			{
+				"name": "REGION_VISIBILITY_LG-XL",
+				"display_name": "Visible only on lg-xl",
+				"display_sequence": 10,
+				"css_classes": "d-none d-lg-block"
+			},
+			{
+				"name": "REGION_VISIBILITY_MD-LG-XL",
+				"display_name": "Visible only on md-lg-xl",
+				"display_sequence": 11,
+				"css_classes": "d-none d-md-block"
+			},
+			{
+				"name": "REGION_VISIBILITY_SM-MD-LG-XL",
+				"display_name": "Visible only on sm-md-lg-xl",
+				"display_sequence": 12,
+				"css_classes": "d-none d-sm-block"
+			}
+		]
 	}
 ]
 {{/template_option_groups}}
