adds basic flexbox structure to regions

--- a/templates/Regions/Standard.hbs
+++ b/templates/Regions/Standard.hbs
@@ -1,8 +1,8 @@
 {{#template}}
-<div id="#REGION_STATIC_ID#" class="ab-region #REGION_CSS_CLASSES#" #REGION_ATTRIBUTES#>
-	<div class="ab-flex-left">#PREVIOUS#</div>
+<div id="#REGION_STATIC_ID#" class="ab-region d-flex flex-row justify-content-between #REGION_CSS_CLASSES#" #REGION_ATTRIBUTES#>
+	<div class="ab-flex-left align-self-center mr-2">#PREVIOUS#</div>
 
-	<div class="ab-flex-center">
+	<div class="ab-flex-center w-100">
 		<div class="ab-region-header">
 			<div class="ab-flex-center">
 				<div class="ab-region-title"><i class="#ICON_CSS_CLASSES#"></i>#TITLE#</div>
@@ -25,7 +25,7 @@
 		</div>
 	</div>
 
-	<div class="ab-flex-right">#NEXT#</div>
+	<div class="ab-flex-right align-self-center ml-2">#NEXT#</div>
 </div>
 {{/template}}
 {{#sub_plug_header_template}}
