--- a/src/scss/_apex_components.scss
+++ b/src/scss/_apex_components.scss
@@ -1,4 +1,5 @@
 @import "apex_components/alerts";
+@import "apex_components/background";
 @import "apex_components/buttons";
 @import "apex_components/cards";
 @import "apex_components/dropdowns";
